--- a/_data/repositories.yml
+++ b/_data/repositories.yml
@@ -1,10 +1,10 @@
 github_users:
-  - torvalds
-  - alshedivat
+  - sir-danksalot
 
 repo_description_lines_max: 2
 
 github_repos:
+  - Sir-Danksalot/ActionRPG
   - alshedivat/al-folio
   - jekyll/jekyll
   - twbs/bootstrap
