--- a/_config.yml
+++ b/_config.yml
@@ -258,7 +258,7 @@ jekyll-archives:
     enabled: [year, tags, categories] # enables year, tag and category archives (remove if you need to disable one of them).
 
 display_tags: ["bibliography", "code", "math"] # these tags will be displayed on the front page of your blog
-display_categories: ["preprints"] # these categories will be displayed on the front page of your blog
+display_categories: ["publications","preprints","talks"] # these categories will be displayed on the front page of your blog
 
 # -----------------------------------------------------------------------------
 # Jekyll Scholar
