--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -1,18 +1,34 @@
 # this file contains the social media links and usernames of the author
 # the commented lines are the default social media links supported by the template
 # the socials will be displayed in the order they are defined here
+email: Areeb.Shah-Mohammed@uibk.ac.at # your email address
+orcid_id: 0009-0003-6830-9098 # your ORCID ID
+work_url: https://www.uibk.ac.at/mathematik/personal/areeb # work page URL
+scholar_userid: cPsZhacAAAAJ # your Google Scholar ID
+arxiv: # your arXiv author ID
+  logo: assets/img/arxiv-logo.svg
+  title: arXiv
+  url: https://arxiv.org/a/shahmohammed_a_1.html
+dblp_url: https://dblp.uni-trier.de/pid/367/6055.html # your DBLP profile url
+zbmath_open: # your zbMath author ID
+  logo: assets/img/ZbMath-open-logo.png
+  title: ZbMath Open 
+  url: https://zbmath.org/authors/?q=ai:shah-mohammed.areeb
+ieee_id: 931874995511063 # your ieeexplore.ieee.org/author/id
+zotero_username: harrierdubard # your zotero username
+github_username: Sir-Danksalot # your GitHub user name
 
 # acm_id: # your dl.acm.org/profile/id
 # blogger_url: # your blogger URL
 # bluesky_url: # your bluesky URL
-# dblp_url: # your DBLP profile url
+# dblp_url: https://dblp.uni-trier.de/pid/367/6055.html # your DBLP profile url
 # discord_id: # your discord id (18-digit unique numerical identifier)
-email: Areeb.Shah-Mohammed@uibk.ac.at # your email address
+# email: Areeb.Shah-Mohammed@uibk.ac.at # your email address
 # facebook_id: # your facebook id
 # flickr_id: # your flickr id
-github_username: Sir-Danksalot # your GitHub user name
+# github_username: Sir-Danksalot # your GitHub user name
 # gitlab_username: # your GitLab user name
-# ieee_id: # your ieeexplore.ieee.org/author/id
+# ieee_id: 931874995511063 # your ieeexplore.ieee.org/author/id
 # inspirehep_id: # Inspire HEP author ID
 # instagram_id: # your instagram id
 # kaggle_id: # your kaggle id
@@ -23,14 +39,14 @@ github_username: Sir-Danksalot # your GitHub user name
 # linkedin_username: # your LinkedIn user name
 # mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 # medium_username: # your Medium username
-orcid_id: 0009-0003-6830-9098 # your ORCID ID
+# orcid_id: 0009-0003-6830-9098 # your ORCID ID
 # osf_id: # your OSF ID
 # pinterest_id: # your pinterest id
 # publons_id: # your ID on Publons
 # quora_username: # your Quora username
 # research_gate_profile: # your profile on ResearchGate
 # rss_icon: true # set to true to show the RSS icon
-scholar_userid: cPsZhacAAAAJ # your Google Scholar ID
+# scholar_userid: cPsZhacAAAAJ # your Google Scholar ID
 # scopus_id: # your profile on Scopus
 # semanticscholar_id: # your Semantic Scholar ID
 # spotify_id: # your spotify id
@@ -41,10 +57,10 @@ scholar_userid: cPsZhacAAAAJ # your Google Scholar ID
 # whatsapp_number: # your WhatsApp number (full phone number in international format. Omit any zeroes, brackets, or dashes when adding the phone number in international format.)
 # wikidata_id: # your wikidata id
 # wikipedia_id: # your wikipedia id (Case sensitive)
-work_url: https://www.uibk.ac.at/mathematik/personal/areeb # work page URL
+# work_url: https://www.uibk.ac.at/mathematik/personal/areeb # work page URL
 # x_username: # your X handle
 # youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
-zotero_username: harrierdubard # your zotero username
+# zotero_username: harrierdubard # your zotero username
 # custom_social: # can be any name here other than the ones already defined above
 #   logo: https://www.alberteinstein.com/wp-content/uploads/2024/03/cropped-favicon-192x192.png # can be png, svg, jpg
 #   title: Custom Social
