Added new CV with LLN lmcs acceptance

--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -15,6 +15,7 @@ zbmath_open: # your zbMath author ID
   title: ZbMath Open
   url: https://zbmath.org/authors/?q=ai:shah-mohammed.areeb
 ieee_id: 931874995511063 # your ieeexplore.ieee.org/author/id
+linkedin_username: areeb-sm-04986b159 # your LinkedIn user name
 zotero_username: harrierdubard # your zotero username
 github_username: Sir-Danksalot # your GitHub user name
 
